oauth-2/authorization-server/practice/microservice/k8s/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: microservice-as
spec:
  mtls:
    mode: STRICT
